# emulator_sigma_dev

./: README.md  pyproject.toml  todo.md
app/: db.py  db_handlers.py
app/devices/: registers_devises.py
src/: app.py  app.spec  db.py  root_window.py
src/devices/: registers_devises.py
src/ui/: button_states.py  card.py  card_dev.py  main_win.py  main_win_new.py  style.qss
src/utilites/: ash_util.py  boot_firmware.py  crc.py  database.py  dialogues.py  server_ash.py  server_mb.py  servers.py  setup.py  tool_tips.py
ui/: connect_db.ui  main_win_v1.ui  main_win_v10.1.ui  main_win_v10.2.1.ui  main_win_v10.2.2.ui  main_win_v10.2.3.ui  main_win_v10.2.4.1.ui  main_win_v10.2.4.2.ui  main_win_v10.2.5.2.ui  main_win_v2.ui  main_win_v3.ui  main_win_v4.ui  main_win_v5.ui  main_win_v6.ui  main_win_v7.ui  main_win_v7_notable.ui  main_win_v7_promout.ui  main_win_v8.1.ui  main_win_v8.2.ui  main_win_v8.3.ui  main_win_v8.4.ui  main_win_v8.5.ui  main_win_v8.ui  main_win_v9.1.ui  purpose_win.ui
